Fix letter visibility
Last letter of che-clip-the-middle-start will now be whole visible.

--- a/dashboard/src/components/attribute/clip-the-middle/che-clip-the-middle.styl
+++ b/dashboard/src/components/attribute/clip-the-middle/che-clip-the-middle.styl
@@ -8,6 +8,7 @@
     text-overflow ellipsis !important
     overflow hidden
     white-space nowrap
+    padding-right 1px
 
   .che-clip-the-middle-end
     flex 1 0 auto
